force-app/main/default/objects/Sales_Target__c/fields/Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target__c</fullName>
    <formula>Quarter_1__c  +  Quarter_2__c  +  Quarter_3__c  +  Quarter_4__c</formula>
    <label>Annual Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>