force-app/main/default/objects/Sales_Target__c/fields/H1_Target__c.field-meta.xml
<CustomField>
    <fullName>H1_Target__c</fullName>
    <formula>Quarter_1__c +  Quarter_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H1 Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>