force-app/main/default/objects/Sales_Target__c/fields/H2_Target__c.field-meta.xml
<CustomField>
    <fullName>H2_Target__c</fullName>
    <formula>Quarter_3__c + Quarter_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H2 Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>