force-app/main/default/objects/Sales_Target__c/fields/Q1_through_Q3_Target__c.field-meta.xml
<CustomField>
    <fullName>Q1_through_Q3_Target__c</fullName>
    <formula>Quarter_1__c +  Quarter_2__c +  Quarter_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 through Q3 Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>