force-app/main/default/objects/Sales_Target__c/fields/Quarter_1__c.field-meta.xml
<CustomField>
    <fullName>Quarter_1__c</fullName>
    <inlineHelpText>Enter Target for Q1</inlineHelpText>
    <label>Quarter 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>