force-app/main/default/objects/Sales_Target__c/fields/Quarter_2__c.field-meta.xml
<CustomField>
    <fullName>Quarter_2__c</fullName>
    <inlineHelpText>Enter Target for Q2</inlineHelpText>
    <label>Quarter 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>