force-app/main/default/objects/Sales_Target__c/fields/Quarter_3__c.field-meta.xml
<CustomField>
    <fullName>Quarter_3__c</fullName>
    <inlineHelpText>Enter Target for Q3</inlineHelpText>
    <label>Quarter 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>