force-app/main/default/objects/Sales_Target__c/fields/Sales_Reps__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Reps</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>