force-app/main/default/objects/Sales_Target__c/fields/Sales_Target_YTD__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_YTD__c</fullName>
    <formula>IF(ISPICKVAL(Region__c,&quot;Africa&quot;),135000,
IF(ISPICKVAL(Region__c,&quot;APAC&quot;),350000,
IF(ISPICKVAL(Region__c,&quot;Europe&quot;),250000,
IF(ISPICKVAL(Region__c,&quot;House&quot;),250000,
IF(ISPICKVAL(Region__c,&quot;India&quot;),1521831,
IF(ISPICKVAL(Region__c,&quot;Middle East&quot;),1518884,
IF(ISPICKVAL(Region__c,&quot;NA&quot;),480000,
IF(ISPICKVAL(Region__c,&quot;APAC - BC&quot;),0,
IF(ISPICKVAL(Region__c,&quot;UAE&quot;),888804,0)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Target - YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>