force-app/main/default/objects/Sales_Target__c/listViews/Current_and_Next_Two_FY.listView-meta.xml
<ListView>
    <fullName>Current_and_Next_Two_FY</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>greaterOrEqual</operation>
        <value>2019</value>
    </filters>
    <label>Current and Next Two FY</label>
</ListView>