force-app/main/default/objects/Sales_Target__c/listViews/Inx_Targets.listView-meta.xml
<ListView>
    <fullName>Inx_Targets</fullName>
    <columns>NAME</columns>
    <columns>Quarter__c</columns>
    <columns>Region__c</columns>
    <columns>Year__c</columns>
    <columns>Sales_Reps__c</columns>
    <columns>Target_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter__c</field>
        <operation>equals</operation>
    </filters>
    <label>Inx Targets</label>
</ListView>