force-app/main/default/objects/Sales_Target__c/listViews/Neils_Targets.listView-meta.xml
<ListView>
    <fullName>Neils_Targets</fullName>
    <columns>NAME</columns>
    <columns>Quarter__c</columns>
    <columns>Region__c</columns>
    <columns>Sales_Reps__c</columns>
    <columns>Target_Sales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Reps__c</field>
        <operation>contains</operation>
        <value>Neil</value>
    </filters>
    <label>Neil&apos;s Targets</label>
</ListView>